@@ -329,6 +329,82 @@ too:
 </article>
 
 
+Videos
+------
+
+Videos are not managed in the CMS, they're just referenced via something like
+`<article_extra id="video_article" videoID="20080402334ddf"/>`.
+
+Create an "article" which references a video:
+
+>>> source = u'''\
+... <article xmlns:py="http://codespeak.net/lxml/objectify/pytype" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+...   <head/>
+...   <body>
+...     <p>No bo po co to.</p>
+...     <article_extra id="video_article" videoID="20080402334ddf"/>
+...     <p>Foo bar</p>
+...     </body>
+... </article>'''
+>>> article = zeit.cms.testcontenttype.testcontenttype.TestContentType(
+...     xml_source=StringIO.StringIO(source))
+>>> converter = zeit.wysiwyg.html.HTMLConverter(article)
+>>> print converter.to_html(article.xml['body'])
+<p>No bo po co to.</p>
+<p>
+  <input type="text" name="" value="video_article:20080402334ddf" size="60"/>
+</p>
+<p>Foo bar</p>
+
+
+>>> converter.from_html(article.xml['body'], '''\
+...     <p>No bo po co to.</p>
+...     <p><input type="text" name="" value="video_article:newvideoid" /></p>
+...     <p>Foo bar</p>''')
+
+>>> print lxml.etree.tostring(article.xml, pretty_print=True)
+<article xmlns:py="http://codespeak.net/lxml/objectify/pytype" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <head/>
+  <body>
+    <p>No bo po co to.</p>
+    <article_extra videoID="newvideoid" id="video_article"/>
+    <p>Foo bar</p>
+  </body>
+</article>
+
+When there is no : in the value just the videoID is set:
+
+>>> converter.from_html(article.xml['body'], '''\
+...     <p>No bo po co to.</p>
+...     <p><input type="text" name="" value="another-videoid" /></p>
+...     <p>Foo bar</p>''')
+>>> print lxml.etree.tostring(article.xml, pretty_print=True)
+<article xmlns:py="http://codespeak.net/lxml/objectify/pytype" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <head/>
+  <body>
+    <p>No bo po co to.</p>
+    <article_extra videoID="another-videoid"/>
+    <p>Foo bar</p>
+  </body>
+</article>
+
+When there is more than one : in the value, it will be contained in the video
+id:
+
+>>> converter.from_html(article.xml['body'], '''\
+...     <p>No bo po co to.</p>
+...     <p><input type="text" name="" value="foo:another:videoid" /></p>
+...     <p>Foo bar</p>''')
+>>> print lxml.etree.tostring(article.xml, pretty_print=True)
+<article xmlns:py="http://codespeak.net/lxml/objectify/pytype" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <head/>
+  <body>
+    <p>No bo po co to.</p>
+    <article_extra videoID="another:videoid" id="foo"/>
+    <p>Foo bar</p>
+  </body>
+</article>
+
 
 Clean up:
 
