@@ -7,6 +7,9 @@ zeit.cms changes
 - Properties mit dem Namespace "DAV:" werden jetzt nicht mehr in XML-Dokumente
   kopiert (bug #4126).
 - Filter in Dateiliste reagiert jetzt auf Dateinamen (bug #4132).
+- Videos können jetzt im WYSIWYG-Editor bearbeitet und eingefügt werden (bug
+  #4149).
+
 
 0.9.12 (2008-04-30)
 -------------------
